section nav: fix stuck

--- a/blocks/Courseware/css/_active_subchapter.less
+++ b/blocks/Courseware/css/_active_subchapter.less
@@ -1,3 +1,8 @@
+.active-subchapter-nav-placeholder {
+  height: 64px;
+  display: none;
+}
+
 ol.active-subchapter {
   background-color: white;
   padding: 10px 10px 10px 0;
